--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-certifi==2019.9.11
-chardet==3.0.4
-idna==2.8
-influxdb==5.2.3
-python-dateutil==2.8.0
-pytz==2019.2
-requests==2.22.0
-six==1.12.0
-urllib3==1.26.5
-PyMonitorLib==0.3.0
+certifi==2022.9.24
+charset-normalizer==2.1.1
+idna==3.4
+influxdb==5.3.1
+msgpack==1.0.4
+python-dateutil==2.8.2
+pytz==2022.4
+requests==2.28.1
+six==1.16.0
+urllib3==1.26.12
