--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
-certifi==2022.12.7
-charset-normalizer==2.1.1
-idna==3.4
-influxdb==5.3.1
-msgpack==1.0.4
-python-dateutil==2.8.2
-pytz==2022.4
-requests==2.28.1
+certifi==2024.2.2
+influxdb-client==1.42.0
+git+https://github.com/Aralocke/PyMonitorLib
+python-dateutil==2.9.0.post0
+reactivex==4.0.4
+setuptools==69.5.1
 six==1.16.0
-urllib3==1.26.12
-PyMonitorLib==0.3.0
+typing_extensions==4.11.0
+urllib3==2.2.1
