Updating package dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-certifi==2024.7.4
-influxdb-client==1.42.0
-git+https://github.com/Aralocke/PyMonitorLib
+certifi==2025.1.31
+influxdb-client==1.48.0
+PyMonitorLib @ git+https://github.com/Aralocke/PyMonitorLib@e22a990c9cd44c8b0a42ad137b8b92187d60c2fe
 python-dateutil==2.9.0.post0
 reactivex==4.0.4
-setuptools==70.0.0
-six==1.16.0
-typing_extensions==4.11.0
-urllib3==2.2.2
+setuptools==75.8.0
+six==1.17.0
+typing_extensions==4.12.2
+urllib3==2.3.0
