--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,16 @@
 certifi==2025.1.31
+charset-normalizer==3.4.1
+distlib==0.3.9
+filelock==3.17.0
+idna==3.10
 influxdb-client==1.48.0
-PyMonitorLib @ git+https://github.com/Aralocke/PyMonitorLib@e22a990c9cd44c8b0a42ad137b8b92187d60c2fe
+platformdirs==4.3.6
+PyMonitorLib @ git+https://github.com/Aralocke/PyMonitorLib@04ed1a609afd5e6906aec7c394b199ee3ebe587c
 python-dateutil==2.9.0.post0
 reactivex==4.0.4
+requests==2.32.3
 setuptools==75.8.0
 six==1.17.0
 typing_extensions==4.12.2
 urllib3==2.3.0
+virtualenv==20.29.1
